--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
         <nav class="navbar navbar-inverse">
             <div class="container-fluid">
                 <div class="navbar-header">
-                <a class="navbar-brand txtColor" href="#/!">ION Trading</a>
+                <a class="navbar-brand txtColor">ION Trading</a>
+                <a class="navbar-brand txtColor"><img src="./Assets/images/logo.png"></a>
                 </div>
                 <ul class="nav navbar-nav">
                 </ul>
